--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,6 +2,7 @@
 @import "./components/header.scss";
 @import "./components/banner.scss";
 @import "./components/items.scss";
+@import "./components/itemDetail.scss";
 
 html,
 body {
