--- a/src/styles/components/items.scss
+++ b/src/styles/components/items.scss
@@ -29,11 +29,26 @@
         text-decoration: none;
         display: inline-block;
         font-size: 16px;
-        margin-top: 10px;
+        margin: 10px;
         transition-duration: 0.3s;
         &:hover {
             background-color: purple;
             color: white;
         }
     }
+}
+.icon {
+    height: 26px;
+    width: 26px;
+    border-radius: 50%;
+    background: orange;
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    color: #fff;
+    left: 684px;
+    top: 337px;
 }
