--- a/src/styles/components/items.scss
+++ b/src/styles/components/items.scss
@@ -1,3 +1,12 @@
+.card-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-top: 80px;
+}
+
 .card {
     height: 350px;
     width: 300px;
@@ -36,19 +45,4 @@
             color: white;
         }
     }
-}
-.icon {
-    height: 26px;
-    width: 26px;
-    border-radius: 50%;
-    background: orange;
-    position: absolute;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    color: #fff;
-    left: 684px;
-    top: 337px;
 }
