--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -3,7 +3,7 @@
     width: 100%;
 
     .shoe-cont {
-        margin-top: 40px;
+        margin-top: 10px;
         position: static;
         img {
             width: 25%;
@@ -15,20 +15,20 @@
             bottom: 50px;
         }
     }
-    span {
-        font-size: 14px;
-        color: white;
-        position: absolute;
-        border: solid orange;
-        height: 17px;
-        width: 17px;
-        padding-top: 0px;
-        border-radius: 70%;
-        margin-left: 39px;
-        background: orange;
-    }
 }
-
+.c-icon {
+    font-size: 14px;
+    color: white;
+    position: absolute;
+    border: solid orange;
+    height: 17px;
+    width: 17px;
+    z-index: 4;
+    padding-top: 0px;
+    border-radius: 70%;
+    margin-left: 39px;
+    background: orange;
+}
 .icon {
     font-size: 54px;
     color: grey;
