--- a/src/styles/components/itemDetail.scss
+++ b/src/styles/components/itemDetail.scss
@@ -6,6 +6,9 @@
         width: 30%;
         height: 30%;
     }
+    p {
+        width: 60%;
+    }
     .btn {
         border: none;
         border-radius: 5px;
