--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -12,6 +12,7 @@ body {
     margin: 0;
     box-sizing: border-box;
     font-family: "Lato";
+    background: #333;
 }
 .container {
     width: 100%;
