--- a/src/styles/components/items.scss
+++ b/src/styles/components/items.scss
@@ -15,9 +15,9 @@
     justify-content: center;
     flex-direction: column;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.4s;
+    transition: 0.4s !important;
     background: rgb(238, 224, 224);
-    border-radius: 10px;
+    border-top-left-radius: 40px;
     margin: 19px;
     &:hover {
         box-shadow: 0 8px 16px 0 #7e5aa7;
