--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -12,10 +12,10 @@ body {
     margin: 0;
     box-sizing: border-box;
     font-family: "Lato";
-    background: #333;
+    background: #fff;
 }
 .container {
-    width: 1280px;
+    width: 100%;
     margin: 0 auto;
 }
 
