--- a/src/styles/components/items.scss
+++ b/src/styles/components/items.scss
@@ -4,7 +4,6 @@
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: row;
-    margin-top: 100px;
 }
 
 .card {
@@ -17,7 +16,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.4s !important;
     background: rgb(238, 224, 224);
-    border-top-left-radius: 40px;
+    border-radius: 10px;
     margin: 19px;
     &:hover {
         box-shadow: 0 8px 16px 0 #7e5aa7;
@@ -27,6 +26,7 @@
         width: 100%;
         height: 60%;
         margin-top: -20px;
+        overflow: hidden;
     }
     .btn {
         border: none;
@@ -45,19 +45,4 @@
             color: white;
         }
     }
-}
-.icon {
-    height: 26px;
-    width: 26px;
-    border-radius: 50%;
-    background: orange;
-    position: absolute;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    color: #fff;
-    left: 684px;
-    top: 337px;
 }
