--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -5,18 +5,11 @@
         margin-top: 40px;
         position: static;
         img {
-            width: 25%;
-        }
-        h2 {
-            position: absolute;
-            top: 200px;
-            right: 0px;
-            left: 0px;
-            bottom: 50px;
-            font-size: 30px;
+            width: 22%;
         }
     }
 }
+
 .c-icon {
     font-size: 14px;
     color: white;
@@ -33,4 +26,10 @@
 .icon-basket {
     font-size: 54px;
     color: grey;
+}
+.brand {
+    position: relative;
+    bottom: 15px;
+    font-size: 23px;
+    font-weight: 700;
 }
